--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
 </head>
 <body>
-    {% if page.title != "Home" %}
+    {% if page.title != "AI for Clinicians" %}
         {% include header-nav.html %}
     {% endif %}
 
