--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,11 +13,14 @@
   <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
 </head>
 <body>
-    {% if page.title != "AI for Clinicians" %}
+    {% if page.title == "AI Consultant and Speaker" 
+      or page.title == "Compliance Pack" 
+      or page.title == "AI Scribe Company Comparisons" 
+      or page.title == "Standards" %}
         {% include header-nav.html %}
     {% endif %}
 
-  <main id="main" role="main" class="main-content">
+  <main id="main" role="main" class="main">
     {{ content }}
   </main>
 
