--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
         {% include header-nav.html %}
     {% endif %}
 
-  <main id="main" role="main" class="main">
+  <main id="main" role="main">
     {{ content }}
   </main>
 
