--- a/_includes/header-nav.html
+++ b/_includes/header-nav.html
@@ -9,7 +9,7 @@
         <nav class="nav" aria-label="Primary">
         <ul class="nav-list">
             <li><a href="{{ '/services/' | relative_url }}" class="nav-link">Services</a></li>
-            <li><a href="{{ '/about/' | relative_url }}" class="nav-link">Compliance Pack</a></li>
+            <li><a href="{{ '/compliance/' | relative_url }}" class="nav-link">Compliance Pack</a></li>
             <li><a href="{{ '/comparisons/' | relative_url }}" class="nav-link">Comparisons Table</a></li>
             <li><a href="{{ '/standards/' | relative_url }}" class="nav-link">AI Ethical Standards</a></li>
             <li><a href="{{ '/contact/' | relative_url }}" class="nav-link">Contact</a></li>
