--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     {% if page.title == "AI Consultant and Speaker" 
-      or page.title == "Compliance Pack" 
+      or page.title == "AI Compliance Pack" 
       or page.title == "AI Scribe Company Comparisons" 
       or page.title == "Standards" %}
         {% include header-nav.html %}
