--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,8 @@
     {% if page.title == "AI Consultant and Speaker" 
       or page.title == "AI Compliance Pack" 
       or page.title == "AI Scribe Company Comparisons" 
-      or page.title == "Standards" %}
+      or page.title == "AI Ethical Standards" 
+      or page.title == "Get in Contact" %}
         {% include header-nav.html %}
     {% endif %}
 
