--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,10 @@
         {% include header-nav.html %}
     {% endif %}
 
+    {% if page.subnav %}
+        {% include sub-nav.html %}
+    {% endif %}
+
   <main id="main" role="main">
     {{ content }}
   </main>
