--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
+  <script src="{{ '/assets/js/main.js' | relative_url }}"></script>
 </head>
 <body>
     {% if page.title == "AI Consultant and Speaker" 
