Contact form submissions

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,8 @@
   </main>
 
   <footer class="site-footer" role="contentinfo">
-    <small>&copy; {{ site.time | date: '%Y' }} {{ site.title }}</small>
+    <small>&copy; {{ date: '%Y' }} {{ site.title }}</small>
+    <br><small>By Psychology Squared Pty Ltd </small>
   </footer>
 </body>
 </html>
