--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
+  <script src="https://challenges.cloudflare.com/turnstile/v0/api.js?render=explicit" defer></script>
   <script src="{{ '/assets/js/main.js' | relative_url }}"></script>
 </head>
 <body>
@@ -31,7 +32,7 @@
   </main>
 
   <footer class="site-footer" role="contentinfo">
-    <small>&copy; {{ date: '%Y' }} {{ site.title }}</small>
+    <small>&copy; {{ site.time | date: '%Y' }} {{ site.title }}</small>
     <br><small>By Psychology Squared Pty Ltd </small>
   </footer>
 </body>
