--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,9 @@
       or page.title == "AI Compliance Pack" 
       or page.title == "AI Scribe Company Comparisons" 
       or page.title == "AI Ethical Standards" 
-      or page.title == "Get in Contact" %}
+      or page.title == "Get in Contact" 
+      or page.title == "Frequently Asked Questions"
+    %}
         {% include header-nav.html %}
     {% endif %}
 
