--- a/_includes/header-nav.html
+++ b/_includes/header-nav.html
@@ -21,6 +21,7 @@
           <li><a href="{{ '/compliance/' | relative_url }}" class="nav-link">Compliance Pack</a></li>
           <li><a href="{{ '/comparisons/' | relative_url }}" class="nav-link">Comparisons Table</a></li>
           <li><a href="{{ '/standards/' | relative_url }}" class="nav-link">AI Ethical Standards</a></li>
+          <li><a href="{{ '/faq/' | relative_url }}" class="nav-link">FAQ</a></li>
           <li><a href="{{ '/contact/' | relative_url }}" class="nav-link">Contact</a></li>
         </ul>
       </nav>
