scrolling, services page

--- a/_includes/header-nav.html
+++ b/_includes/header-nav.html
@@ -25,6 +25,9 @@
     <nav class="nav" id="primary-nav" aria-label="Primary" hidden>
       <ul class="nav-list">
         <li>
+          <a href="{{ '/index.html/#services' | relative_url }}" class="nav-link">Services</a>
+        </li>
+        <li>
           <a href="{{ '/compliance/' | relative_url }}" class="nav-link">Compliance Pack</a>
         </li>
         <li class="dropdown">
