--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -98,8 +98,8 @@
               <input type="email" id="email" required />
             </div>
             <div class="form-group">
-              <label for="phone">Phone Number</label>
-              <input type="tel" id="phone" placeholder="e.g., +61 4xx xxx xxx" />
+              <label for="phone">Phone Number *</label>
+              <input type="tel" id="phone" required />
             </div>
             <div class="form-group">
               <label for="contact-method">Preferred Contact Method</label>
