Landing page text uplift

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
   </head>
   <body>
     {% include header-nav.html %}
-    {% if page.subnav %} {% include sub-nav.html %} {% endif %}
+    <!-- {% if page.subnav %} {% include sub-nav.html %} {% endif %} -->
 
     <main id="main" role="main">
       <!-- Contact Form Modal -->
