--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,10 +13,8 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;600&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+
     <link
       rel="stylesheet"
       href="{{ '/assets/css/style.css' | relative_url }}"
