--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,14 +93,13 @@ h1, h2 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 0;
+    padding: 1rem 2rem;
 }
 
 .nav {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    margin-left: auto;
 }
 
 .nav-list {
@@ -488,8 +487,7 @@ h1, h2 {
 .site-footer {
     background: var(--navy-deepest);
     border-top: 1px solid var(--border-color);
-    margin-top: 2.5rem;
-    padding: 2rem 0;
+    padding: 2.5rem 0;
     text-align: center;
 }
 
