--- a/_includes/header-nav.html
+++ b/_includes/header-nav.html
@@ -25,7 +25,7 @@
     <nav class="nav" id="primary-nav" aria-label="Primary" hidden>
       <ul class="nav-list">
         <li>
-          <a href="{{ '/index.html/#services-section' | relative_url }}" id="nav-link-services" class="nav-link">Services</a>
+          <a href="{{ '/#services-section' | relative_url }}" id="nav-link-services" class="nav-link">Services</a>
         </li>
         <li>
           <a href="{{ '/compliance/' | relative_url }}" class="nav-link">Compliance Pack</a>
