--- a/_includes/header-nav.html
+++ b/_includes/header-nav.html
@@ -30,15 +30,15 @@
         <li>
           <a href="{{ '/compliance/' | relative_url }}" class="nav-link">Compliance Pack</a>
         </li>
+        <li>  
+          <a href="{{ '/comparisons/' | relative_url }}" class="nav-link">AI Scribes</a>
+        </li>
         <li class="dropdown">
           <button class="dropdown-toggle" aria-expanded="false" aria-haspopup="true">
             Important Information
             <span class="dropdown-arrow" aria-hidden="true">▼</span>
           </button>
           <ul class="dropdown-menu">
-            <li>  
-              <a href="{{ '/comparisons/' | relative_url }}" class="nav-link">Comparisons Table</a>
-            </li>
             <li>  
               <a href="{{ '/standards/' | relative_url }}" class="nav-link">AI Ethical Standards</a>
             </li>
