--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1170,6 +1170,7 @@ h1, h2 {
 .mb-8 { margin-bottom: 2rem; }
 .mt-1 { margin-top: 0.25rem; }
 .mt-8 { margin-top: 2rem; }
+.mt-12 { margin-top: 3rem; }
 .pt-6 { padding-top: 1.5rem; }
 
 
