--- a/_includes/header-nav.html
+++ b/_includes/header-nav.html
@@ -54,7 +54,7 @@
               <a href="{{ '/standards/' | relative_url }}" class="nav-link">AI Ethical Standards</a>
             </li>
             <li>  
-              <a href="{{ '/posts/' | relative_url }}" class="nav-link">Updates and Articles</a>
+              <a href="{{ '/posts/' | relative_url }}" class="nav-link">Events and Articles</a>
             </li>
             <li>  
               <a href="{{ '/faq/' | relative_url }}" class="nav-link">FAQ</a>
