--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="{{ '/assets/images/favicon.ico' | relative_url }}"
+      href="{{ '/assets/images/base/favicon.ico' | relative_url }}"
     />
     <script
       src="https://challenges.cloudflare.com/turnstile/v0/api.js?render=explicit"
