--- a/_includes/header-nav.html
+++ b/_includes/header-nav.html
@@ -32,7 +32,7 @@
           <a href="{{ '/compliance/' | relative_url }}" class="nav-link">Compliance Pack</a>
         </li>
         <li class="dropdown">
-          <a href="{{ '/affliates/' | relative_url }}" class="nav-link">Provisional Psychologists</a>
+          <a href="{{ '/provisional-psychologists/' | relative_url }}" class="nav-link">Provisional Psychologists</a>
         </li>
         <li class="dropdown">
           <button class="dropdown-toggle" aria-expanded="false" aria-haspopup="true">
