fix/prov-psych-content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1304,6 +1304,8 @@ a {
 
 /* Provisional Psychologists */
 .prov-psych-card {
+    width: 100%;
+    height: 350px;
     max-width: 400px;
     margin: 0 auto;
 }
