--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -586,6 +586,21 @@ h1, h2 {
     z-index: 1;
 }
 
+.event-orgnanisations {
+
+    max-width: 750px;
+    margin: 0 auto;
+}
+
+.event-container {
+    display: grid;
+    grid-template-columns: 1fr auto;
+    gap: 2rem;
+    align-items: center;
+    margin: 3rem auto;
+    max-width: 600px;
+}
+
 .event-title {
     color: var(--text-secondary);
     margin-bottom: 0.5rem;
@@ -594,6 +609,7 @@ h1, h2 {
 .event-desc {
     color: var(--text-muted);
     font-size: 0.9rem;
+    margin-bottom: 0.5rem;
 }
 
 .btn-group {
