--- a/_includes/header-nav.html
+++ b/_includes/header-nav.html
@@ -36,7 +36,18 @@
         </li>
         <li class="dropdown">
           <button class="dropdown-toggle" aria-expanded="false" aria-haspopup="true">
-            Important Information
+            Apps
+            <span class="dropdown-arrow" aria-hidden="true">▼</span>
+          </button>
+          <ul class="dropdown-menu">
+            <li>  
+              <a href="{{ '/calculator/' | relative_url }}" class="nav-link">AI Scribe Calculator</a>
+            </li>
+          </ul>
+        </li>
+        <li class="dropdown">
+          <button class="dropdown-toggle" aria-expanded="false" aria-haspopup="true">
+            Resources
             <span class="dropdown-arrow" aria-hidden="true">▼</span>
           </button>
           <ul class="dropdown-menu">
