chore/removed-calculator_layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,10 @@
       href="{{ '/assets/css/style.css' | relative_url }}"
     />
     <link
+      rel="stylesheet"
+      href="{{ '/assets/css/calculator.css' | relative_url }}"
+    />
+    <link
       rel="icon"
       type="image/x-icon"
       href="{{ '/assets/images/base/favicon.ico' | relative_url }}"
@@ -29,6 +33,7 @@
       defer
     ></script>
     <script src="{{ '/assets/js/main.js' | relative_url }}"></script>
+    <script src="{{ '/assets/js/calculator.js' | relative_url }}"></script>
   </head>
   <body>
     {% include header-nav.html %}
