chore/calculator-uplift

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,23 +15,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;600&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
 
-    <link
-      rel="stylesheet"
-      href="{{ '/assets/css/style.css' | relative_url }}"
-    />
-    <link
-      rel="stylesheet"
-      href="{{ '/assets/css/calculator.css' | relative_url }}"
-    />
-    <link
-      rel="icon"
-      type="image/x-icon"
-      href="{{ '/assets/images/base/favicon.ico' | relative_url }}"
-    />
-    <script
-      src="https://challenges.cloudflare.com/turnstile/v0/api.js?render=explicit"
-      defer
-    ></script>
+    <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}" />
+    <link rel="stylesheet" href="{{ '/assets/css/calculator.css' | relative_url }}" />
+    <link rel="stylesheet" href="{{ '/assets/css/tooltip.css' | relative_url }}" />
+    <link rel="icon" type="image/x-icon" href="{{ '/assets/images/base/favicon.ico' | relative_url }}" />
+    <script src="https://challenges.cloudflare.com/turnstile/v0/api.js?render=explicit" defer></script>
     <script src="{{ '/assets/js/main.js' | relative_url }}"></script>
     <script src="{{ '/assets/js/calculator.js' | relative_url }}"></script>
   </head>
